major statistics updates

--- a/dashboard.html
+++ b/dashboard.html
@@ -15,6 +15,16 @@
         <div id="top-tracks-list"></div>
     </div>
 
+    <div id = 'top-artists'>
+        <h2>Your Top Artists</h2>
+        <div id="top-artists-list"></div>
+    </div>
+
+    <div id = 'top-genres'>
+        <h2>Your Top Genres</h2>
+        <div id="top-genres-list"></div>
+    </div>
+    
     <div id="main-options" class="options">
         <div id="playlists-option" class="option">
             <h2>Your Playlists</h2>
